# authsock-filter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REVIEW_PROMPTS.md  REVIEW_RESULTS.md  build.rs  flake.nix  justfile  lefthook.yml
.claude/: review-context.md
.claude/rules/: project.md
.github/workflows/: ci.yml  test-masking.yml  update-homebrew.yml
docs/: cli-design.md  installation.md  service.md
docs/knowledge/: 001-1password-ssh-touchid-recovery.md
pkgx/: README.md  package.yml
src/: error.rs  lib.rs  main.rs
src/agent/: proxy.rs  server.rs  upstream.rs
src/cli/: args.rs  exit_code.rs  mod.rs
src/cli/commands/: completion.rs  config.rs  log.rs  mod.rs  register.rs  run.rs  service.rs  start.rs  status.rs  stop.rs  unregister.rs  upgrade.rs  version.rs
src/config/: file.rs  mod.rs
src/filter/: comment.rs  evaluator.rs  fingerprint.rs  github.rs  keyfile.rs  keytype.rs  pubkey.rs  rule.rs
src/logging/: jsonl.rs  mod.rs
src/protocol/: codec.rs  message.rs
src/service/: daemon.rs  launchd.rs  mod.rs  systemd.rs
src/utils/: mod.rs  path.rs  socket.rs  version_manager.rs
tests/: e2e_proxy_test.rs  integration_test.rs
