[package]
name = "authsock-filter"
version = "0.1.3"
edition = "2024"
description = "SSH agent proxy with filtering and logging"
license = "MIT"
authors = ["Yoshiaki Kawazu (@kawaz)"]
repository = "https://github.com/kawaz/authsock-filter"
keywords = ["ssh", "agent", "proxy", "filter"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# SSH key handling
ssh-key = { version = "0.6", features = ["std", "rand_core", "ed25519", "rsa"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Pattern matching
regex = "1"
globset = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization for logging
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Byte manipulation
bytes = "1"

# Base64 encoding
base64 = "0.22"

# Async utilities
futures = "0.3"

# HTTP client for GitHub API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Path utilities
dirs = "5"
shellexpand = "3"

# Unix system calls
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
rand = "0.8"

[[bin]]
name = "authsock-filter"
path = "src/main.rs"
